[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/factory_background.jpg" type="Texture" id=1]
[ext_resource path="res://scripts/StartGameButton.gd" type="Script" id=2]
[ext_resource path="res://scripts/ExitGameButton.gd" type="Script" id=3]
[ext_resource path="res://Sounds/main_menue.wav" type="AudioStream" id=4]
[ext_resource path="res://scripts/AudioStreamPlayer.gd" type="Script" id=5]
[ext_resource path="res://Screens/ButtonClickSoundPlayer.gd" type="Script" id=6]
[ext_resource path="res://Sounds/ClickButton.wav" type="AudioStream" id=7]

[node name="MainMenue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 2015.0
margin_bottom = 755.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -306.5
margin_right = 306.5
margin_bottom = 258.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Skateboard
2D"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -40.5
margin_right = 104.0
margin_bottom = 40.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
margin_right = 208.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start Game"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TempButton" type="Button" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 208.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Highscores"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitGameButton" type="Button" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 208.0
margin_bottom = 81.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Exit Game"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenueMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
script = ExtResource( 5 )

[node name="ButtonClickSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
script = ExtResource( 6 )

[connection signal="button_down" from="VBoxContainer/StartGameButton" to="ButtonClickSoundPlayer" method="_on_StartGameButton_button_down"]
[connection signal="button_up" from="VBoxContainer/StartGameButton" to="ButtonClickSoundPlayer" method="_on_StartGameButton_button_up"]
[connection signal="button_up" from="VBoxContainer/StartGameButton" to="VBoxContainer/StartGameButton" method="_on_StartGameButton_button_up"]
[connection signal="button_down" from="VBoxContainer/TempButton" to="ButtonClickSoundPlayer" method="_on_TempButton_button_down"]
[connection signal="button_up" from="VBoxContainer/TempButton" to="ButtonClickSoundPlayer" method="_on_TempButton_button_up"]
[connection signal="button_down" from="VBoxContainer/ExitGameButton" to="ButtonClickSoundPlayer" method="_on_ExitGameButton_button_down"]
[connection signal="button_up" from="VBoxContainer/ExitGameButton" to="ButtonClickSoundPlayer" method="_on_ExitGameButton_button_up"]
[connection signal="button_up" from="VBoxContainer/ExitGameButton" to="VBoxContainer/ExitGameButton" method="_on_ExitGameButton_button_up"]
[connection signal="finished" from="MainMenueMusic" to="MainMenueMusic" method="_on_AudioStreamPlayer_finished"]
[connection signal="finished" from="ButtonClickSoundPlayer" to="VBoxContainer/StartGameButton" method="_on_ButtonClickSoundPlayer_finished"]
